--- a/proposal.html
+++ b/proposal.html
@@ -73,7 +73,7 @@
 				</div>
 				
 				<div class="fff">
-								<p>created by Andre Jarl</p>
+								<p>created by $ Og#5813</p>
 				</div>
 				
 				<script src="proposalv2.js"></script>
